# lvkw

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  size_check  size_check.c  size_check_double  size_check_float  wayland_backend_tasklist.md
.github/workflows/: build.yml  smoke.yml  win32.yml
benchmarks/: CMakeLists.txt
benchmarks/event_queue/: README.md  bench_event_queue.cpp  compare_event_queue_policies.py
docs/dev_guide/: api_implementation.md  benchmarking.md  direct_dispatch_proposal.md  documentation.md  event_version_tracking_plan.md  index.md  internal_checks_caveats.md  primary_selection_plan.md  text_input_model.md  vulkan_loading.md  wayland_async_dnd_plan.md  wayland_constraints_plan.md  wayland_discrete_scroll_plan.md  x11_completion_plan.md
docs/user_guide/: backend_limitations.md  clipboard.md  controller.md  coordinates_and_dpi.md  cursors.md  diagnosis.md  events_and_input.md  fault_injection.md  headers.md  index.md  integration.md  metrics.md  monitors.md  ownership_glossary.md  telemetry.md  threading.md  tuning.md
examples/: CMakeLists.txt
examples/basic_c/: CMakeLists.txt  main.c  utils.h  vulkan_engine.c  vulkan_engine.h
examples/basic_cpp/: CMakeLists.txt  main.cpp  utils.hpp  vulkan_engine.cpp  vulkan_engine.hpp
examples/shared_renderer/: CMakeLists.txt  file_to_c.py  vulkan_renderer.c  vulkan_renderer.h
include/lvkw/: lvkw-context.h  lvkw-controller.h  lvkw-core.h  lvkw-cursor.h  lvkw-diagnostics.h  lvkw-events.h  lvkw-ext-controller.h  lvkw-input.h  lvkw-metrics.h  lvkw-monitor.h  lvkw-shortcuts.h  lvkw-telemetry.h  lvkw-tuning.h  lvkw-window.h  lvkw.h  lvkw.hpp  lvkw_checked.h  (+1 more)
scripts/: generate_protocols.sh
src/: CMakeLists.txt
src/lvkw/base/: CMakeLists.txt  lvkw_api_checks.h  lvkw_api_constraints.h  lvkw_assume.h  lvkw_backend.h  lvkw_base.c  lvkw_config.h.in  lvkw_diag_internal.h  lvkw_diagnostic_internal.h  lvkw_event_queue.c  lvkw_event_queue.h  lvkw_internal.h  lvkw_mem_internal.h  lvkw_string_cache.c  lvkw_string_cache.h  lvkw_thread_internal.h  lvkw_transient_pool.c  lvkw_types_internal.h  lvkw_version.h.in
src/lvkw/base/controller/: CMakeLists.txt  lvkw_controller_internal.h
src/lvkw/common/: CMakeLists.txt
src/lvkw/common/context/: api_constraints.h  backend.h  config.h.in  context.c  event_queue.c  event_queue.h  internal.h
src/lvkw/common/controller/: CMakeLists.txt  controller_internal.h
src/lvkw/common/core/: assume.h  diagnostic_internal.h  mem_internal.h  string_cache.c  string_cache.h  thread_internal.h  transient_pool.c  transient_pool.h  types_internal.h
src/lvkw/linux/: CMakeLists.txt  linux_entry.c  linux_internal.h  linux_keys.c  linux_utils.c  lvkw_linux.c  lvkw_linux_internal.h  lvkw_linux_keys.c  lvkw_linux_utils.c
src/lvkw/linux/controller/: CMakeLists.txt  controller_linux.c  lvkw_controller_linux.c
src/lvkw/linux/dlib/: linux_loader.c  linux_loader.h  xkbcommon.h
src/lvkw/linux/wayland/: CMakeLists.txt  lvkw_wayland_internal.h  wayland_context.c  wayland_core.c  wayland_csd.c  wayland_display.c  wayland_entry.c  wayland_events.c  wayland_input.c  wayland_internal.h  wayland_misc.c  wayland_monitor.c  wayland_window.c
src/lvkw/linux/wayland/dlib/: libdecor.h  loader.c  loader.h  wayland-client.h  wayland-cursor.h
src/lvkw/linux/wayland/protocols/: CMakeLists.txt  wl_protocols.c  wl_protocols.h
src/lvkw/linux/wayland/protocols/xml/: content-type-v1.xml  ext-idle-notify-v1.xml  text-input-unstable-v3.xml
src/lvkw/linux/x11/: CMakeLists.txt  lvkw_x11.c  lvkw_x11_internal.h  x11_context.c  x11_entry.c  x11_events.c  x11_input.c  x11_internal.h  x11_window.c
src/lvkw/linux/x11/dlib/: X11.h  Xcursor.h  Xi.h  Xlib-xcb.h  Xrandr.h  Xss.h  loader.c  loader.h
src/lvkw/macos/: CMakeLists.txt  cocoa_backend.m  cocoa_stubs.c  lvkw_macos.c  lvkw_macos_internal.h  macos_entry.c  macos_internal.h
src/lvkw/macos/controller/: CMakeLists.txt
src/lvkw/mock/: CMakeLists.txt  lvkw_mock_internal.h  mock_context.c  mock_core.c  mock_events.c  mock_window.c
src/lvkw/wayland/: CMakeLists.txt  lvkw_wayland_internal.h  wayland_context.c  wayland_core.c  wayland_csd.c  wayland_csd.h  wayland_display.c  wayland_events.c  wayland_input.c  wayland_misc.c  wayland_window.c
src/lvkw/wayland/controller/: CMakeLists.txt  lvkw_controller_wayland.c
src/lvkw/wayland/dlib/: libdecor.h  loader.c  wayland-client.h  wayland-cursor.h
src/lvkw/wayland/protocols/: CMakeLists.txt  wl_protocols.c  wl_protocols.h
src/lvkw/win32/: CMakeLists.txt  lvkw_win32.c  lvkw_win32_internal.h  win32_context.c  win32_core.c  win32_entry.c  win32_events.c  win32_internal.h  win32_window.c
src/lvkw/win32/controller/: CMakeLists.txt
src/lvkw/x11/: CMakeLists.txt  lvkw_x11.c  lvkw_x11_internal.h  x11_context.c  x11_events.c  x11_window.c
src/lvkw/x11/dlib/: X11.h  Xcursor.h  Xi.h  Xlib-xcb.h  Xss.h  loader.c
tests/: CMakeLists.txt  check_taxonomy_headers.sh
tests/mock_backend/: CMakeLists.txt  lvkw_mock.h  lvkw_mock_internal.h  mock_context.c  mock_controller.c  mock_core.c  mock_events.c  mock_window.c
tests/unit/: CMakeLists.txt  test_abi.cpp  test_checked_api.cpp  test_common_api_contract.cpp  test_cpp_api.cpp  test_cursor.cpp  test_data_contract.cpp  test_dnd.cpp  test_event_queue.cpp  test_event_queue_half_by_type_window.cpp  test_haptics.cpp  test_helpers.hpp  test_input_contract.cpp  test_internal_base.cpp  test_loop_hazard.cpp  test_mock_backend.cpp  test_string_cache.cpp  test_transient_pool.cpp  test_validation.cpp  test_version.cpp
tools/testbed/: CMakeLists.txt  README.md
tools/testbed/src/: app.cpp  app.hpp  feature_module.hpp  main.cpp
tools/testbed/src/modules/: clipboard_module.cpp  clipboard_module.hpp  controller_module.cpp  controller_module.hpp  cursor_module.cpp  cursor_module.hpp  dnd_module.cpp  dnd_module.hpp  event_log_module.cpp  event_log_module.hpp  event_module.cpp  event_module.hpp  input_module.cpp  input_module.hpp  metrics_module.cpp  metrics_module.hpp  monitor_module.cpp  monitor_module.hpp  window_module.cpp  window_module.hpp
(+32 files in other folders)
